--- a/config.yml
+++ b/config.yml
@@ -4,6 +4,12 @@ variables: 50
 ## Which d are constrained for d-dimensional chi-squared values
 constraints: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]
 
+## Percent points for lower bounds of constraints
+lower_bounds: [.1, .1, .1, .1, .1, .1, .1, .1, .1, .1, .1, .1]
+
+## Percent points for upper bounds of constraints
+upper_bounds: [.9, .9, .9, .9, .9, .9, .9, .9, .9, .9, .9, .9]
+
 ## Cognitive bias parameters
 bias_alpha: [2, 2, 2, 2, 2, 27, 5, 0,  0, 1, 0, 0, 1, 0, 0]
 bias_beta:  [5, 5, 5, 5, 5, 30, 8, 1,  0, 3, 0, 1, 2, 0, 0]
